--- a/web/css/site.css
+++ b/web/css/site.css
@@ -113,3 +113,63 @@ a.desc:after {
 .nav > li > form > button.logout:focus {
     outline: none;
 }
+
+/*.cake {*/
+    /*!*padding: 5px 20px 25px;*!*/
+    /*height: 240px;*/
+/*}*/
+/*.cake > .item {*/
+    /*border: 1px solid #e8ecf2;*/
+    /*padding: 10px;*/
+/*}*/
+/*.cake > .item > .title, .cake > .item > .views{*/
+    /*text-align: center;*/
+/*}*/
+
+/*.cake > .item > .cake-img {*/
+    /*text-align: center;*/
+    /*height: 120px;*/
+    /*margin-bottom: 5px;*/
+    /*border-bottom: 1px solid #e8ecf2;*/
+/*}*/
+
+/*.cake > .item > .cake-img img {*/
+    /*display: inline-block;*/
+    /*height: auto;*/
+    /*max-width: 100%;*/
+    /*max-height: 100%;*/
+/*}*/
+
+
+.cake {
+    height: 270px;
+
+}
+.cake a {
+    color: #333;
+    text-decoration: none; /* Отменяем подчеркивание у ссылки */
+}
+.cake .item {
+    border: 1px solid #e8ecf2;
+    padding: 10px;
+}
+.cake .item .title, .cake .item .views{
+    text-align: center;
+}
+
+.cake .item .cake-img {
+    text-align: center;
+    height: 170px;
+    margin-bottom: 5px;
+    border-bottom: 1px solid #e8ecf2;
+    overflow: hidden;
+    background-size: cover;
+    background-position: center;
+}
+
+.cake .item .cake-img img {
+    display: inline-block;
+    height: auto;
+    max-width: 100%;
+    max-height: 100%;
+}
