--- a/web/css/site.css
+++ b/web/css/site.css
@@ -96,9 +96,9 @@ a.desc:after {
     border: none;
 }
 
-@media(max-width:767px) {
+@media (max-width: 767px) {
     .nav li > form > button.logout {
-        display:block;
+        display: block;
         text-align: left;
         width: 100%;
         padding: 10px 15px;
@@ -115,45 +115,47 @@ a.desc:after {
 }
 
 /*.cake {*/
-    /*!*padding: 5px 20px 25px;*!*/
-    /*height: 240px;*/
+/*!*padding: 5px 20px 25px;*!*/
+/*height: 240px;*/
 /*}*/
 /*.cake > .item {*/
-    /*border: 1px solid #e8ecf2;*/
-    /*padding: 10px;*/
+/*border: 1px solid #e8ecf2;*/
+/*padding: 10px;*/
 /*}*/
 /*.cake > .item > .title, .cake > .item > .views{*/
-    /*text-align: center;*/
+/*text-align: center;*/
 /*}*/
 
 /*.cake > .item > .cake-img {*/
-    /*text-align: center;*/
-    /*height: 120px;*/
-    /*margin-bottom: 5px;*/
-    /*border-bottom: 1px solid #e8ecf2;*/
+/*text-align: center;*/
+/*height: 120px;*/
+/*margin-bottom: 5px;*/
+/*border-bottom: 1px solid #e8ecf2;*/
 /*}*/
 
 /*.cake > .item > .cake-img img {*/
-    /*display: inline-block;*/
-    /*height: auto;*/
-    /*max-width: 100%;*/
-    /*max-height: 100%;*/
+/*display: inline-block;*/
+/*height: auto;*/
+/*max-width: 100%;*/
+/*max-height: 100%;*/
 /*}*/
-
 
 .cake {
     height: 270px;
 
 }
+
 .cake a {
     color: #333;
     text-decoration: none; /* Отменяем подчеркивание у ссылки */
 }
+
 .cake .item {
     border: 1px solid #e8ecf2;
     padding: 10px;
 }
-.cake .item .title, .cake .item .views{
+
+.cake .item .title, .cake .item .views {
     text-align: center;
 }
 
@@ -172,4 +174,22 @@ a.desc:after {
     height: auto;
     max-width: 100%;
     max-height: 100%;
+}
+
+.view-cake {
+    text-align: center;
+}
+.view-cake img{
+    vertical-align: middle;
+    max-width: 100%;
+    max-height: 500px;
+}
+
+.view-cake-description{
+    margin: 20px;
+    padding: 20px;
+    border-top: 1px solid #e8ecf2;
+}
+.view-cake-description .title{
+    font-size: 18px;
 }
