--- a/web/css/site.css
+++ b/web/css/site.css
@@ -161,7 +161,8 @@ a.desc:after {
 
 .cake .item .cake-img {
     text-align: center;
-    height: 170px;
+    height: 150px;
+    width: 150px;
     margin-bottom: 5px;
     border-bottom: 1px solid #e8ecf2;
     overflow: hidden;
